--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -74,12 +74,12 @@
     </div>
 
     <div class="row" style="padding-top: 10px">
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
         <div class="label_item">{{ "Đẩy file hợp đồng lên Bộ công thương" | translate }}</div>
         <div>
           <div [innerHTML]="this.getFileCeCa()" class="input_text"></div>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-6" style="align-self: center">
         <input type="radio" checked style="outline: none" />
         <span>
