--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -237,7 +237,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6">
+
+                <!--Đẩy file hợp đồng lên Bộ công thương-->
+                <!-- <div class="col-md-6">
                   <div class="label text-color">
                     {{ "Đẩy file hợp đồng lên Bộ công thương" | translate }}
                     <span class="required-title">*</span>
@@ -259,7 +261,8 @@
                       {{ "Lựa chọn này không được để trống" | translate }}
                     </div>
                   </div>
-                </div>
+                </div> -->
+                
               </div>
 
               <div
