--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -89,12 +89,12 @@
                 </div>
             </div>
         
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <div class="label_item">{{'Đẩy file hợp đồng lên Bộ công thương' | translate }}</div>
                 <div>
                     <div [innerHTML]="cEcAPushMode" class="input_text"></div>
                   </div>
-            </div>
+            </div> -->
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
