--- a/src/app/admin/admin-main/admin-pack/admin-detail-pack/admin-detail-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-detail-pack/admin-detail-pack.component.html
@@ -53,7 +53,7 @@
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label_item">{{'Thời gian' | translate }}</div>
+                <div class="label_item">{{'Thời gian(tháng)' | translate }}</div>
                 <div>
                     <div [innerHTML]="this.datas?.duration" class="input_text"></div>
                 </div>
