--- a/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
@@ -202,7 +202,7 @@
       <div class="col-md-6">
         <div class="label text-color">{{ "Mô tả" | translate }}</div>
         <div class="input-data">
-          <input style="height: 80px;" type="text" formControlName="describe" />
+          <textarea style="height: 80px" formControlName="describe" ></textarea>
         </div>
         <div *ngIf="submitted && f.describe.errors" class="invalid">
           <div *ngIf="f.describe.errors.pattern">
