--- a/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
@@ -50,7 +50,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data">
-          <input type="text" formControlName="totalBeforeVAT" />
+          <input (blur)="formatCurrencyBefore($event)" [(ngModel)]="totalBeforeVAT" type="text" formControlName="totalBeforeVAT" />
         </div>
         <div *ngIf="submitted && f.totalBeforeVAT.errors" class="invalid">
           <div *ngIf="f.totalBeforeVAT.errors.required">
@@ -70,7 +70,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data">
-          <input type="text" formControlName="totalAfterVAT" />
+          <input (blur)="formatCurrencyAfter($event)" type="text" formControlName="totalAfterVAT" [(ngModel)]="totalAfterVAT" formControlName="totalAfterVAT" />
         </div>
         <div *ngIf="submitted && f.totalAfterVAT.errors" class="invalid">
           <div *ngIf="f.totalAfterVAT.errors.required">
