--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -56,7 +56,7 @@
           <!--Loại ký-->
           <div class="row">
             <div *ngIf="this.filter_status === 1" class="col-md-12 item_contract_infor">{{'Loại ký' | translate}}:
-              <span class="status_blue"></span>
+              <span class="status_blue">{{item.typeOfSign}}</span>
             </div>
           </div>
 
