--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,8 +1,8 @@
 <div class="signature-container" id="export-html"
-     style="width: 155px;min-height: 80px; border: 1px solid #ddd; display: flex; font-size: 9px">
+     style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
   <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div class="signature-content"
-       style="margin-left: 6px; color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+       style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
     <div style="z-index: 2">Ký bởi: {{nameCompany}}</div>
     <div style="z-index: 2">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
   </div>
