--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -21,17 +21,6 @@
           [(ngModel)]="data_organization.name" 
           disabled 
         />
-        <div style="margin-left: 5px;width: 110px">
-          {{ "Mã số thuế" | translate | uppercase }}&nbsp;
-        </div>
-        <span style="color: red" *ngIf="this.flagUSBTokenMyOrg == true">*</span>
-        <input
-          class="input2"
-          type="text"
-          [(ngModel)]="this.myTaxCode"
-          [disabled]="this.isEditable"
-          placeholder="Nhập mã số thuế"
-        />
       </div>
 
       <div class="contract__content--participants">
@@ -166,14 +155,26 @@
                 <!--                </div>-->
               </div>
 
-              <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
+              <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là usbtoken-->
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
                 <div class="participants__name" style="width: 90%">
-                  <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
+                  <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
                   <div class="input-data">
-                    <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.uid" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
                 </div>
               </div>
+
+              <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là hsm-->
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignHsm(d).length > 0">
+                <div class="participants__name" style="width: 90%">
+                  <div class="label_detail text-color">Mã số thuế&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <input type="text" placeholder="{{'Nhập mã số thuế' | translate}}" [(ngModel)]="d.tax_code" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div *ngIf="getOriganzationSignature().length > 1" class="col-md-1 delete-element"
               (click)="deleteOriganzationSignature(index)">
@@ -187,6 +188,7 @@
               (click)="addOriganzationSignature()">{{'btn.add.user.sign' | translate}}</u>
           </div>
         </div>
+        
         <!-- to chuc cua toi - nguoi van thu -->
         <div class="participants-border">
           <div class="label">{{'user.doc' | translate}}</div>
@@ -262,6 +264,17 @@
                   </div>
                 </div>
               </div>
+
+              <!--trường hiển thị khi văn thư tổ chức của tôi chọn loại ký là usb token-->
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
+                <div class="participants__name" style="width: 90%">
+                  <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                  <div class="input-data">
+                    <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.uid" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div class="col-md-1 delete-element" (click)="deleteOriganzationDocument(index)">
               <img src="assets/img/border_close.svg" alt="close.vn">
@@ -302,7 +315,7 @@
           [(ngModel)]="item.name"
           [disabled]="item.type == 3"
         />
-        <div style="margin-left: 5px;width: 110px">
+        <!-- <div style="margin-left: 5px;width: 110px">
           {{ "Mã số thuế" | translate | uppercase }}&nbsp;<span style="color: red" *ngIf="this.flagUSBToken === true || this.flagUSBTokenDocument === true">*</span
           >
         </div>
@@ -313,7 +326,7 @@
             (item.type == 2 || item.type == 3 ? 'Nhập mã số thuế' : '') | translate
           }}"
           [(ngModel)]="item.tax_code"
-        />
+        /> -->
       </div>
 
       <div *ngIf="this.dataParnterOrganization().length > 1" style="display: flex; justify-content: flex-end">
@@ -499,14 +512,35 @@
                   </div>
                 </div>
 
-                <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
+                <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
                   </div>
+                </div> -->
+
+                <!--Check ký usb token cho đối tác, nếu có thì render trường mã số thuế/cccd-->
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
+                  <div class="participants__name" style="width: 90%">
+                    <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                    <div class="input-data">
+                      <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.uid" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    </div>
+                  </div>
                 </div>
+
+                <!--trường hiển thị khi người ký của đối tác chọn loại ký là hsm-->
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignHsm(d).length > 0">
+                  <div class="participants__name" style="width: 90%">
+                    <div class="label_detail text-color">Mã số thuế&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.tax_code" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    </div>
+                  </div>
+                </div>
+
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1 || getPartnerCoordination(item).length > 0"
                 class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
@@ -599,6 +633,16 @@
                   </div>
                 </div>
 
+                <!--trường hiển thị khi văn thư đối tác của tổ chức chọn loại ký là usb token-->
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
+                  <div class="participants__name" style="width: 90%">
+                    <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                    <div class="input-data">
+                      <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.uid" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    </div>
+                  </div>
+                </div>
+
               </div>
               <div class="col-md-1 delete-element" (click)="deletePartnerDocument(index, item)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
@@ -653,7 +697,7 @@
                       [(ngModel)]="d.sign_type" 
                       placeholder="{{'choose' | translate }}"
                       [settings]="dropdownSignTypeSettings" 
-                      [data]="signTypeList" 
+                      [data]="isListSignPerson" 
                       (onSelect)="onItemSelect($event,item.type)"
                       (onDeSelect)="deSelectPartnerSign($event, item)"
                       (ngModelChange)="selectWithOtp($event, d, true)"
