fix module admin

--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -64,7 +64,7 @@
           <td>{{ list.duration }}</td>
           <td>{{ list.numberOfContracts }}</td>
           <td>{{ getCurrencyFormat(list.totalBeforeVAT) }}</td>
-          <td>{{ getCurrencyFormat(list.totalBeforeVAT) }}</td>
+          <td>{{ getCurrencyFormat(list.totalAfterVAT) }}</td>
           <td
             *ngIf="
               !(this.editPackRole === false && this.deletePackRole === false)
