--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -10,14 +10,15 @@
           <span class="required-title">*</span>
         </div>
         <p-dropdown
-        placeholder="Chọn gói dịch vụ"
-        filterBy="code"
-        [showClear]="true"
-        [options]="listDichVu"
-        optionLabel="code"
-        optionValue="code"
-        (onChange)="onChangeMaGoi($event)"
-        formControlName="packCode"
+          placeholder="Chọn gói dịch vụ"
+          filterBy="code"
+          [filter]="true"
+          [showClear]="true"
+          [options]="listDichVu"
+          optionLabel="code"
+          optionValue="code"
+          (onChange)="onChangeMaGoi($event)"
+          formControlName="packCode"
         >
         </p-dropdown>
         <div *ngIf="submitted && f.packCode.errors" class="invalid">
@@ -286,3 +287,4 @@
     </div>
   </form>
 </div>
+
