--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -163,6 +163,21 @@
             </div>
           </div>
           <div>
+
+            <!--Mã số thuế hsm-->
+            <div class="row">
+              <div class="col-md-12">
+                <div>{{'Mã số thuế' | translate}}</div>
+                <div class="input-data">
+                  <input type="text" formControlName="taxCodeHsm">
+                </div>
+                <div *ngIf="submittedSign && fHsm.taxCodeHsm.errors" class="invalid">
+                  <div *ngIf="fHsm.taxCodeHsm.errors.pattern">{{'Mã số thuế không đúng định dạng' | translate}}</div>
+                </div>
+              </div>
+            </div>
+
+            <!--Tên người dùng hsm-->
             <div class="row">
               <div class="col-md-12">
                 <div>{{'user.name.v2' | translate}}</div>
@@ -171,6 +186,16 @@
                 </div>
                 <div *ngIf="submittedSign && fHsm.nameHsm.errors" class="invalid">
                   <div *ngIf="fHsm.nameHsm.errors.pattern">{{'Tên người dùng không được chứa ký tự đặc biệt' | translate}}</div>
+                </div>
+              </div>
+            </div>
+
+            <!--Mật khẩu cấp 1 hsm-->
+            <div class="row">
+              <div class="col-md-12">
+                <div>{{'Mật khẩu cấp 1' | translate}}</div>
+                <div class="input-data">
+                  <input type="text" formControlName="password1Hsm">
                 </div>
               </div>
             </div>
